HasCASL/test/ListEx.hascasl
var b : Type
var a :Type+
type List a : Type
free type List a ::= Nil | Cons(head : a; tail : List a)
free type List a ::= Nil | Cons(head : a; tail : List b)
free type List a ::= Nil | Cons(head : a; tail : List a b)

free type Tree a ::= Leaf | Branch(head : Tree a; tail : Tree a)
generated type Tree1 a ::= Leaf | Branch(head : Tree a; tail : Tree1 a)
type Tree2 a ::= Leaf | Branch(head : Tree a; tail : Tree2 a)
